tdf#106052 Treat SubFormat for "Precision as shown"

Get precision from the correct subformat

Change-Id: I458e5b3d1fb515864f19499ac9ac529e1d68a267
Reviewed-on: https://gerrit.libreoffice.org/34505
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Eike Rathke <erack@redhat.com>